--- a/LOTAWeb/LOTAWeb.csproj
+++ b/LOTAWeb/LOTAWeb.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LOTA.DataAccess\LOTA.DataAccess.csproj" />
     <ProjectReference Include="..\LOTA.Model\LOTA.Model.csproj" />
+    <ProjectReference Include="..\LOTA.Service\LOTA.Service.csproj" />
     <ProjectReference Include="..\LOTA.Utility\LOTA.Utility.csproj" />
   </ItemGroup>
 
