--- a/LOTAWeb/appsettings.json
+++ b/LOTAWeb/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LOTA_db;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LOTAWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LOTA_db;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
