--- a/LOTAWeb/LOTAWeb.csproj
+++ b/LOTAWeb/LOTAWeb.csproj
@@ -31,8 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Student\Controllers\" />
+    <Folder Include="wwwroot\js\student\" />
+    <Folder Include="wwwroot\js\tutor\" />
   </ItemGroup>
 
 </Project>
