--- a/LOTAWeb/LOTAWeb.csproj
+++ b/LOTAWeb/LOTAWeb.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\lib\select2\**" />
+    <Content Remove="wwwroot\lib\select2\**" />
+    <EmbeddedResource Remove="wwwroot\lib\select2\**" />
+    <None Remove="wwwroot\lib\select2\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
