--- a/LOTA.Service/LOTA.Service.csproj
+++ b/LOTA.Service/LOTA.Service.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\LOTA.Utility\LOTA.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
+  </ItemGroup>
+
 </Project>
