--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /MovieAppWeb/Properties
+
+# serviceDependencies
+Properties/ServiceDependencies/
+serviceDependencies.json
