--- a/LOTA.Utility/LOTA.Utility.csproj
+++ b/LOTA.Utility/LOTA.Utility.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LOTA.Model\LOTA.Model.csproj" />
+  </ItemGroup>
+
 </Project>
