1.add default password for tutors and students 2.add change password feature on first login 3.removw useless codes of tutor features

--- a/LOTAWeb/appsettings.json
+++ b/LOTAWeb/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LOTA_db;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Smtp": {
+    "Host": "",
+    "Port": 587,
+    "UserName": "",
+    "Password": "",
+    "EnableSsl": true,
+    "From": "",
+    "DisplayName": "LOTA System"
   }
 }
