--- a/LOTAWeb/appsettings.Development.json
+++ b/LOTAWeb/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "UserName": "",
+    "Password": "behv nrkf ozwy dojx",
+    "EnableSsl": true,
+    "From": "",
+    "DisplayName": "LOTA System"
   }
 }
