update email features update pages

--- a/LOTAWeb/appsettings.Development.json
+++ b/LOTAWeb/appsettings.Development.json
@@ -9,9 +9,9 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "UserName": "",
-    "Password": "behv nrkf ozwy dojx",
+    "Password": "",
     "EnableSsl": true,
     "From": "",
-    "DisplayName": "LOTA System"
+    "DisplayName": "The Testing Email From Whitireia & Weltec LOTA "
   }
 }
